added way/generators to dev

--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
 		"laravel/framework": "4.2.*"
 	},
     "require-dev": {
-        "heroku/heroku-buildpack-php": "dev-master"
+        "heroku/heroku-buildpack-php": "dev-master",
+        "way/generators": "~2.0"
     },
 	"autoload": {
 		"classmap": [
